# Aegisub

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  resources.cmake
dependencies/: conanfile.py
dependencies/csri/: CMakeLists.txt
libaegisub/: lagi_pre.h  libaegisub.cmake
libaegisub/common/: charset.cpp  hotkey.cpp  id_allocator.cpp  io.cpp  json.cpp  mru.cpp  option.cpp  resources_fs.cpp
libaegisub/include/libaegisub/: buffer_cache.h  factory.h  format.h  hotkey.h  id_allocator.h  io.h  json.h  mru.h  option.h  registry.h  resources.h  resources_fs.h
libaegisub/include/libaegisub/plugin/: registry.h
libaegisub/unix/: resources.cpp
libaegisub/windows/: resources_win.cpp
po/: aegisub.pot
resources/: manifest.respack.in  manifest_osx.respack.in  resource.h.in  resource.rc.in
resources/configs/osx/: default_config.json
src/: async_video_provider.cpp  async_video_provider.h  audio_controller.cpp  audio_karaoke.cpp  audio_player.cpp  audio_provider_factory.cpp  audio_provider_factory.h  audio_renderer.cpp  audio_renderer_spectrum.cpp  autoreghook.cpp  autoreghook.h  base_grid.cpp  compat.cpp  compat.h  dialog_about.cpp  dialog_align.cpp  dialog_attachments.cpp  dialog_automation.cpp  dialog_autosave.cpp  dialog_colorpicker.cpp  dialog_dummy_video.cpp  dialog_export.cpp  dialog_fonts_collector.cpp  dialog_jumpto.cpp  dialog_kara_timing_copy.cpp  dialog_properties.cpp  dialog_resample.cpp  dialog_selection.cpp  dialog_shift_times.cpp  dialog_spellchecker.cpp  dialog_style_editor.cpp  dialog_style_manager.cpp  dialog_styling_assistant.cpp  dialog_timing_processor.cpp  dialog_translation.cpp  frame_main.cpp  frame_main.h  hotkey.cpp  main.cpp  main.h  (+34 more)
src/command/: app.cpp  audio.cpp  automation.cpp  command.cpp  command.h  edit.cpp  grid.cpp  help.cpp  keyframe.cpp  recent.cpp  subtitle.cpp  time.cpp  timecode.cpp  tool.cpp  video.cpp  vis_tool.cpp
src/include/aegisub/: audio_player.h  context.h  menu.h  menu_dynamic.h  menu_initializer.h  subtitles_provider.h
src/res/: res.rc
tests/: teardown.bat  tests.cmake
tests/tests/: access.cpp  karaoke_matcher.cpp  path.cpp
